# nicktd

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: components.rs  game_phase.rs  lib.rs  messages.rs  shape.rs
docs/refinery/: steering.md
docs/refinery/skills/unit-refiner/: SKILL.md
docs/rust-frontend-refactor/: RUST_VIEW_REFACTOR.md
docs/superpowers/plans/: 2026-07-21-unitkind-family-selection.md
docs/superpowers/specs/: 2026-07-19-tower-families-design.md
server/: Cargo.toml
server/.sqlx/: query-1fcd46af7cb52c5c2bda8338e04958188410aa230bcb3ee711bdfe93b4ed6e32.json  query-55c6f8de4412560e980a5223179a8f54427a039a7f426a6b38e441c2c0fb2020.json  query-5b50fc14072bf21f50510703d063bc27532fe4256635cfbec4f4974493bac2cd.json  query-624db332bd803e25d2d499fff0c92940c73fef525b34679c715f22cf76d4628e.json  query-6f54cb17ac4ae270d85d8b98e2a46d3a2669854b0e852719d2422894df26d1c5.json  query-8e2914e96b6ab474db5cd2c824639a4dad828f588caebd4953b85206cb51e45d.json
server/migrations/: 20251129204412_create_accounts_table_with_not_null.sql
server/server/data/: nicktd.db
server/src/: database.rs  main.rs  router.rs  server.rs  state.rs
server/src/handler/: cleanup.rs  combat.rs  game_loop.rs  in_game.rs  king.rs  matchmaking.rs  mod.rs  pre_game.rs  sim_tests.rs  spawn.rs  wave.rs  worker.rs
server/src/handler/combat/: attack.rs  damage.rs  mod.rs  movement.rs  targeting.rs
server/src/model/: account.rs  components.rs  constants.rs  family.rs  game_state.rs  jwt.rs  king_config.rs  lobby.rs  messages.rs  mod.rs  placed_shape.rs  player.rs  shape.rs  unit_config.rs  unit_kind.rs
server/src/routes/: auth.rs  ws.rs
view/: animations.ts  app.js  app.ts  app_build_ui.ts  index.html  king_upgrade_panel.ts  layout.ts  mercenary_panel.ts  package-lock.json  package.json  test_animations.ts  test_build_catalog_ui.ts  test_king_upgrade_panel.ts  test_mercenary_panel.ts  test_theme.ts  test_unit_info_panel.ts  test_visual_diff.ts  theme.ts  tsconfig.json  types.ts  unit_info_panel.ts  visual_diff.ts
view-rust/: Cargo.toml  Trunk.toml  index.html
view-rust/src/: app.rs  app_state.rs  assets.rs  auth.rs  bevy_app.rs  game_view.rs  lobby.rs  main.rs  storage.rs  ws.rs
view/renderer/: board.ts  effects.ts  index.ts  scene.ts  units.ts
