[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
bevy_ecs = "0.17.2"
