[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.0", features = [ "sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
