[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
futures-util = "0.3"
hyper = { version = "1.0", features = ["http1", "server"] }
jsonwebtoken = "9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.0", features = [ "sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
url = "2.5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hyper-tungstenite = "0.19.0"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
