[package]
name = "view-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
bevy_ecs = { version = "0.17.2", default-features = false }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_winit",
    "bevy_ui",
    "bevy_asset",
    "bevy_pbr",
    "webgl2",
] }
reqwest = { version = "0.12", features = ["json"] }
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-storage = "0.3"
futures = { version = "0.3", default-features = false, features = ["std"] }
